--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<script src="js/libs/three.min.js"></script>
 	<script src="js/libs/firstPersonControls.js"></script>
 	<script src="js/libs/simplepeer.min.js"></script>
-	<script src="server.js"
+	<script src="server.js"></script>
 
 	<script src="js/environment.js"></script>
 	<!-- <script src="js/scene.js"></scrip> -->
